--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   </head>
  
   <body>
-    Hello World
+
+    <div>
+        <img src="images/history.jpeg" alt="profile image" width="300px" />
+        <h2>History</h2>
+     </div>
+
   </body>
  
 </html>
