Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
  
   <body>
 
-    <div>
-        <img src="images/history.jpeg" alt="profile image" width="300px" />
-        <h2>History</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/history.jpeg" alt="profile image" width="300px" />
+        <h2 id="profile-name">History</h2>
      </div>
 
   </body>
