added initial style.css to style the profile

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
   </head>
  
   <body>
 
     <div id="profile-container">
-        <img id="profile-image" src="images/history.jpeg" alt="profile image" width="300px" />
+        <img id="profile-image" src="images/history.jpg" alt="profile image" width="300px" />
         <h2 id="profile-name">History</h2>
      </div>
 
