added new div as header container with id = header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  
   <body>
 
+    <div id="header">Header</div>
+
     <div id="profile-container">
         <img id="profile-image" src="images/history.jpg" alt="profile image" width="300px" />
         <h2 id="profile-name">History</h2>
