--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h2 id="profile-name">History</h2>
      </div>
 
+     <div id="footer">Footer</div>
+     
   </body>
+
+  
  
 </html>
